fix(style): fix alignments

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -20,7 +20,7 @@ body, html {
 
 .table-cell {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 #decoration, #decoration2, #decoration3 {
@@ -93,6 +93,12 @@ body, html {
       border-radius: 100%;
     }
   }
+}
+
+header {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 // ----- Mobile styles -----
